resources/Cilium/gateway-https.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: tls-gateway
spec:
  gatewayClassName: cilium
  listeners:
  - name: https-1
    protocol: HTTPS
    port: 443
    hostname: "argo.dllocal.test"
    tls:
      certificateRefs:
      - kind: Secret
        name: dllocal.test
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: https-app-route-1
spec:
  parentRefs:
  - name: tls-gateway
  hostnames:
  - "argo.dllocal.test"
  rules:
  - matches:
    # - path:
    #     type: PathPrefix
    #     value: /details
    backendRefs:
    - name: argocd-server
      port: 443
